# IN2140

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
.linters/: iwyu.imp
home_exam/: CMakeLists.txt  Makefile  assignment.md  common.mk
home_exam/assignment_files/: Makefile  messages_1.txt  messages_2.txt  run_1.sh  run_2.sh
home_exam/assignment_files/print_lib/: print_lib.c  print_lib.h
home_exam/assignment_files/print_lib/include/: print_lib.h
home_exam/assignment_files/print_lib/src/: print_lib.c
home_exam/node/: Makefile
home_exam/node/include/: node.h  node_communication.h  node_parser.h  sender.h
home_exam/node/src/: node.c  node_communication.c  node_parser.c  sender.c
home_exam/routing_server/: Makefile
home_exam/routing_server/include/: adjacency_matrix.h  dijkstra.h  receiver.h  route.h  routing_server_communication.h  server_communication.h  validation.h
home_exam/routing_server/src/: adjacency_matrix.c  dijkstra.c  receiver.c  route.c  routing_server.c  routing_server_communication.c  server_communication.c  validation.c
home_exam/test/: Makefile  test_adjacency_matrix.c  test_communication_1.sh  test_communication_2.sh  test_communication_3.sh  test_dijkstra.c  test_integration_1.sh  test_multiple_processes.sh  test_node_communication.c  test_node_parser.c  test_receiver.c  test_route.c  test_routing_server_communication.c  test_validation.c
home_exam/test/data/: test_communication_1_output.txt  test_communication_2_output.txt  test_communication_3_101_output.txt  test_communication_3_15_output.txt  test_communication_3_42_output.txt  test_communication_3_input.txt  test_integration_1_15_output.txt  test_integration_1_1_output.txt  test_integration_1_42_output.txt  test_messages.txt  test_receiver_3_output.txt  test_receiver_6_output.txt  test_route_1_logfile.txt  test_validation_3_output.txt  test_validation_5_output.txt
home_exam/test/include/: test_tools.h
home_exam/test/src/: test_tools.c
home_exam/utils/: Makefile
home_exam/utils/include/: common.h  dynamic_memory.h
home_exam/utils/src/: common.c  dynamic_memory.c
network_theory_assignments/: set_1.md  set_2.md  set_3.md  set_4.md
network_theory_assignments/client_server_example/: Makefile  client1.c  helper.c  server1.c
network_theory_assignments/client_server_example/include/: helper.h
notes/: Compilation.md  Memory.md  Network.md  Registers.md  Storage.md
obligatory_assignment/: .gitignore  CMakeLists.txt  assignment.md  kommandoer_10_routers.txt  router_operation.c
obligatory_assignment/assignment_files/: commands_10_routers.txt  commands_50_routers.txt  kommandoer_10_routers.txt  kommandoer_50_rutere.txt
obligatory_assignment/include/: binary_file.h  command.h  dynamic_memory.h  router.h  utils.h
obligatory_assignment/src/: binary_file.c  command.c  dynamic_memory.c  router.c  router_operation.c  utils.c
obligatory_assignment/test/: CMakeLists.txt  test_binary_file.c  test_command.c  test_router.c  test_utils.c
obligatory_assignment/test/data/: commands_5_routers_2.txt  commands_5_routers_3.txt  testNeighbors  testRouter
obligatory_assignment/test/include/: helpers.h
obligatory_assignment/test/src/: helpers.c
os_theory_assignments/: CMakeLists.txt  self_test_OSes.md  set_2.md  set_2_os_assignment_5.c  set_3.md  set_4.md  set_4_os_assignment_7.c  set_4_os_assignment_8.c  set_5.md  set_5_os_assignment_7.c  set_5_os_assignment_8.c
os_theroy_assignments/: set_1.md  set_2.md  set_3.md  set_4.md  set_5.md
programming_assignments/: CMakeLists.txt
programming_assignments/set_1/: CMakeLists.txt  assignment_1.c  assignment_2.c  assignment_3.c  assignment_4.c  assignment_5.c  s1_assignment_1.c  s1_assignment_2.c  s1_assignment_3.c  s1_assignment_4.c  s1_assignment_5.c  s1_assignment_6.c
programming_assignments/set_2/: CMakeLists.txt  s2_assignment_1.c  s2_assignment_2.c  s2_assignment_3.c  s2_assignment_3_0.txt  s2_assignment_3_1.txt  s2_assignment_3_2.txt  s2_assignment_3_3.txt  s2_assignment_3_4.txt  s2_assignment_4.c  s2_assignment_5.c  s2_assignment_6.c  s2_assignment_6.csv  s2_assignment_6_add.txt  s2_assignment_6_remove.txt
programming_assignments/set_3/: .gitignore  CMakeLists.txt  Makefile_shared  Makefile_shared.mk  Makefile_static  Makefile_static.mk  s3_assignment_1.md  s3_assignment_2.c  s3_assignment_3.c  s3_assignment_4.md  s3_assignment_5.c  s3_assignment_5_1.txt  s3_assignment_5_2.txt  s3_assignment_6.c  s3_assignment_7.c
utils/: CMakeLists.txt
utils/include/: file_operations.h  logger.h  my_math.h  person.h  string_helpers.h
utils/src/: file_operations.c  logger.c  my_math.c  person.c  string_helpers.c
